deploy/base/registry/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: registry-service
  namespace: pedagog-data
spec:
  type: LoadBalancer
  selector:
    app: registry
  ports:
    - port: 5000
      targetPort: 5000
